[tool.poetry]
name = "depythel"
version = "0.0.0-alpha.0"
description = "Interdependency Visualiser and Dependency Hell scrutiniser"
authors = ["harens <harensdeveloper@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pyvis = {version = "^0.1.9", optional = true}
networkx = {version = "^2.6.3", optional = true}


[tool.poetry.extras]
visual = ["pyvis", "networkx"]

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
Sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
types-toml = "^0.10.1"
pytest-mock = "^3.6.1"
pylint = "^2.12.2"

# See https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# TODO: Remove before production
[tool.pylint.messages_control]
disable = ["fixme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
