[tool.poetry]
name = "depythel-clt"
version = "0.1.0"
description = "CLT for Interdependency Visualiser and Dependency Hell scrutiniser"
authors = ["harens <harensdeveloper@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
packages = [{include = "depythel_clt"}]

[tool.poetry.dependencies]
python = "^3.7"
depythel_api = { sibling = true }
pyvis = "^0.1.9"
networkx = "^2.6.3"
click = "^8.0.3"
rich = "^11.0.0"
beartype = "^0.10.0"
rich-click = "^0.1.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
Sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
types-toml = "^0.10.1"
pytest-mock = "^3.6.1"
pylint = "^2.12.2"
sphinx-click = "^3.0.2"
pytest-sugar = "^0.9.4"
toml = "^0.10.2"

[tool.poetry.scripts]
depythel = "depythel_clt.main:depythel"

[tool.relaxed-poetry.sub-projects]
depythel_api = "depythel_api"

# See https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# TODO: Remove before production
[tool.pylint.messages_control]
disable = ["fixme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
